# sneeze-plugin-tpn

./: .gitignore  AGENTS.md  README.md  environment-ocr.yml  pyproject.toml
src/sneeze/tpn/: commands.py  config.py  ocr_vllm.py  pdf_pages.py
tests/: test_plugin_import.py
