[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sneeze-plugin-tpn"
version = "0.1"
description = "Sneeze plugin for tpn."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sneeze",
]

[project.optional-dependencies]
pdf = [
  "pdf2image",
  "pillow",
  "tqdm",
]
ocr = [
  "huggingface_hub",
  "pdf2image",
  "pillow",
  "tqdm",
  "transformers",
]
dev = [
  "pytest",
  "ruff",
]

[project.entry-points."sneeze.plugins"]
tpn = "sneeze.tpn"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sneeze*"]
namespaces = true

[tool.black]
line-length = 78
target-version = ["py312"]

[tool.ruff]
line-length = 78
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.pycodestyle]
max-line-length = 78
